# cc-laws-collections

./: .gitignore  README.md  start.sh  stop.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: laws.py
backend/app/models/: __init__.py  law.py
backend/app/scheduler/: tasks.py
backend/app/schemas/: __init__.py  law.py
backend/app/services/: crawler.py
backend/scripts/: import_internal_law.py
backend/tests/: test_crawler.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: laws.js
frontend/src/router/: index.js
frontend/src/views/: Detail.vue  Home.vue  Search.vue  Timeline.vue
